@@ -318,8 +318,6 @@ static int parse_command_line(char_os **argv)
   return i;
 }
 
-extern void caml_init_ieee_floats (void);
-
 #ifdef _WIN32
 extern void caml_signal_thread(void * lpParam);
 #endif
@@ -361,9 +359,6 @@ CAMLexport void caml_main(char_os **argv)
   if (!caml_startup_aux(/* pooling */ caml_cleanup_on_exit))
     return;
 
-  /* Machine-dependent initialization of the floating-point hardware
-     so that it behaves as much as possible as specified in IEEE */
-  caml_init_ieee_floats();
   caml_init_locale();
 #if defined(_MSC_VER) && __STDC_SECURE_LIB__ >= 200411L
   caml_install_invalid_parameter_handler();
@@ -501,7 +496,6 @@ CAMLexport value caml_startup_code_exn(
   if (!caml_startup_aux(pooling))
     return Val_unit;
 
-  caml_init_ieee_floats();
   caml_init_locale();
 #if defined(_MSC_VER) && __STDC_SECURE_LIB__ >= 200411L
   caml_install_invalid_parameter_handler();
